# commonprayer

./: .gitignore  Procfile  README.md  RustConfig  TODO.md  rust-toolchain
editor/: .gitignore  Cargo.toml  index.html
editor/src/: condition.rs  content.rs  editor.rs  main.rs
episcopal_api/: Cargo.toml
episcopal_api/crates/api/: Cargo.toml
episcopal_api/crates/api/src/: summary.rs
episcopal_api/crates/bible/: Cargo.toml
episcopal_api/crates/bible/src/: lib.rs  rv09.rs  usx_book_codes.rs
episcopal_api/crates/calendar/: Cargo.toml
episcopal_api/crates/calendar/src/: calendar.rs  date.rs  feasts.rs  holy_day.rs  lib.rs  liturgical_color.rs  liturgical_day.rs  liturgical_week.rs  propers.rs  rank.rs  sanctoral.rs  season.rs  transferred_feast.rs  various_occasions.rs  weekday.rs  year.rs
episcopal_api/crates/calendar/tests/: autogenerated_tests.rs
episcopal_api/crates/canticle-table/: Cargo.toml
episcopal_api/crates/canticle-table/src/: id.rs  lib.rs
episcopal_api/crates/export/docx/: Cargo.toml
episcopal_api/crates/export/ldf/: Cargo.toml
episcopal_api/crates/export/to_rust_code/: Cargo.toml
episcopal_api/crates/export/web/: Cargo.toml
episcopal_api/crates/export/web-component/: Cargo.toml
episcopal_api/crates/hymnal/: Cargo.toml
episcopal_api/crates/hymnal/src/: el_himnario.json  el_himnario.rs  h82.json  h82.rs  levas.json  levas.rs  lib.rs  wlp.json  wlp.rs
episcopal_api/crates/language/: Cargo.toml
episcopal_api/crates/language/src/: lib.rs
episcopal_api/crates/lectionary/: Cargo.toml
episcopal_api/crates/lectionary/src/: lib.rs  reading.rs  reading_type.rs
episcopal_api/crates/liturgy/: Cargo.toml
episcopal_api/crates/liturgy/src/: antiphon.rs  biblical_citation.rs  biblical_reading.rs  canticle.rs  category.rs  choice.rs  condition.rs  display_format.rs  document.rs  document_error.rs  gloria_patri.rs  heading.rs  hymn_link.rs  invitatory.rs  lectionary_reading.rs  lib.rs  litany.rs  liturgy.rs  parallel.rs  parallel_table.rs  path.rs  preces.rs  preference.rs  psalm.rs  psalm_citation.rs  reference.rs  responsive_prayer.rs  rubric.rs  sentence.rs  series.rs  show.rs  slug.rs  status.rs  text.rs  version.rs
episcopal_api/crates/psalter/: Cargo.toml
episcopal_api/crates/psalter/src/: lib.rs
episcopal_api/crates/reference-parser/: Cargo.toml
episcopal_api/crates/reference-parser/src/: book_abbrevs.rs  books.rs  lib.rs  query.rs  range.rs  utils.rs
episcopal_api/crates/reference-parser/tests/: parsing_tests.rs
episcopal_api/crates/status/: Cargo.toml
episcopal_api/crates/status/src/: lib.rs
episcopal_api/src/: lib.rs
framework/leptos/: Cargo.toml
framework/leptos/src/: attribute.rs  child.rs  dynamic_element.rs  event_stream.rs  lib.rs  lists.rs  operations.rs  reactive.rs  static_element.rs  view.rs
framework/leptos/src/hydrate/: mod.rs
framework/leptos/src/ssg/: mod.rs  page.rs
framework2/leptos/: Cargo.toml
framework2/leptos/src/: cmd.rs  error.rs  event_emitter.rs  hydration.js  lib.rs  page.rs  ssr.rs  ssr_prop_selector.js  ssr_streaming.js  ssr_streaming.rs  state.rs  view.rs
framework2/leptos/src/component/: link.rs  mod.rs
framework2/leptos/src/custom_element/: make_custom_element.js  mod.rs
framework2/leptos/src/dom/: mod.rs  operations.rs
framework2/leptos/src/polyfills/: declarative_shadow_dom.js
website/: Cargo.toml
website/server/: Cargo.toml
website/server/src/: bing.rs  main.rs
website/website/: Cargo.toml
website/website/src/: lib.rs  table_of_contents.rs
website/website/static/: 404.css  calendar.css  canticle-table.css  daily-readings.css  document.css  general.css  holy-day.css  hymnal.css  lectionary.css  settings.css  vars.css
website/website/translations/: en.yml
website2/: .gitignore  BUGS.md  Cargo.toml  TODO.md
website2/app/: .gitignore  Cargo.toml
website2/app/src/: events.rs  icon.rs  lib.rs  preferences.rs  user_info.rs
website2/app/static/: about.css  calendar.css  daily-readings.css  display-settings.css  document.css  general.css  hymnal.css  hymnal_search.css  vars.css
website2/app/translations/: en.yml
website2/client/auth/: Cargo.toml
website2/client/biblical_citation_loader/: Cargo.toml
website2/client/calendar/: Cargo.toml
website2/client/calendar_controller/: Cargo.toml
website2/client/daily_office/: Cargo.toml
website2/client/daily_readings/: Cargo.toml
website2/client/date_picker/: Cargo.toml
website2/client/datepicker/: Cargo.toml
website2/client/document/: Cargo.toml
website2/client/document_action/: Cargo.toml
website2/client/eucharistic_readings/: Cargo.toml
website2/client/export_links/: Cargo.toml
website2/client/form/: Cargo.toml
website2/client/holy_day/: Cargo.toml
website2/client/hymn/: Cargo.toml
website2/client/hymn_media/: Cargo.toml
website2/client/hymnal/: Cargo.toml
website2/client/lectionary/: Cargo.toml
website2/client/media_session/: Cargo.toml
website2/client/meditation/: Cargo.toml
website2/client/meditation_timer/: Cargo.toml
website2/client/modal/: Cargo.toml
website2/client/readings/: Cargo.toml  build.sh
website2/client/tabs/: Cargo.toml
website2/server/: Cargo.toml  dev.sh
website2/server/migrations/: 20220625120532_create_settings_table.sql  20220629194448_create_liturgy_settings.sql  20220711121040_create_home_page_card_deck.sql  20220714115951_timestamp_on_favorites_and_bookmarks.sql
website2/server/src/: bing.rs  main.rs  request_compat.rs  response_compat.rs
website2/server2/: Cargo.toml
website2/server2/src/: main.rs
website3/client/: Cargo.toml
website3/client/src/: lib.rs
website3/commonprayer-site/: .gitignore  Cargo.toml  TODO.md  build.rs  index.html
website3/commonprayer-site/src/: calendar.rs  canticle_table.rs  document.rs  fetch.rs  header.rs  home.rs  i18n.rs  lib.rs  main.rs  menu.rs  modal.rs  psalter.rs  settings.rs  time.rs
website3/commonprayer-site/styles/: calendar.css  canticle-table.css  document.css  main.css  modal.css  psalter.css  readings.css  search.css
website3/server/: Cargo.toml
website3/server/src/: main.rs
(+620 files in other folders)
