[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { path = "../framework/leptos" }
calendar = { path = "../episcopal_api/crates/calendar" }
liturgy = { path = "../episcopal_api/crates/liturgy" }
serde_json = "1"
futures = "0.3"
wasm-bindgen = { version = "0.2" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "CssStyleDeclaration",
  "Document",
  "DocumentFragment",
  "DomTokenList",
  "Element",
  "Event",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "Location",
  "Node",
  "NodeList",
  "Storage",
  "Text",
  "TreeWalker",
  "Window"
]