[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { path = "../framework/leptos" }
calendar = { path = "../episcopal_api/crates/calendar" }
language = { path = "../episcopal_api/crates/language" }
lectionary = { path = "../episcopal_api/crates/lectionary" }
liturgy = { path = "../episcopal_api/crates/liturgy" }
status = { path = "../episcopal_api/crates/status" }
to_rust_code = { path = "../episcopal_api/crates/export/to_rust_code" }
strum = "0.24"
serde_json = "1"
futures = "0.3"
wasm-bindgen = { version = "0.2" }
serde = { version = "1", features = ["derive"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "CssStyleDeclaration",
  "DataTransfer",
  "Document",
  "DocumentFragment",
  "DomTokenList",
  "DragEvent",
  "Element",
  "Event",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "HtmlTextAreaElement",
  "Location",
  "Node",
  "NodeList",
  "Selection",
  "Storage",
  "Text",
  "TreeWalker",
  "Window"
]