[workspace]
members = [
	"app",
	"client/calendar",
	"client/daily_office",
	"client/daily_readings",
	"client/document",
	"client/eucharistic_readings",
	"client/holy_day",
	"client/hymn",
	"client/hymnal",
	"client/lectionary",
	"client/meditation",
	"server",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'