[workspace]
members = [
	"app",
	"client/biblical_citation_loader",
	"client/calendar_controller",
	"client/date_picker",
	"client/export_links",
	"client/form",
	"client/hymn_media",
	"client/media_session",
	"client/meditation_timer",
	"client/modal",
	"client/tabs",
	"server",
]

#[profile.release]
#codegen-units = 1
#lto = true
#opt-level = 3