[workspace]
members = [
	"app",
	"client/auth",
	"client/date_picker",
	"client/export_links",
	"client/form",
	"client/media_session",
	"client/meditation_timer",
	"client/modal",
	"client/tabs",
	"server"
]

[profile.server]
#codegen-units = 1
#lto = true
inherits = "release"
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'