[package]
name = "leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_macro = { path = "../leptos_macro" }
cfg-if = "1"
wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"]}
wasm-bindgen-futures = "0.4"
thiserror = "1.0"
wee_alloc = "0.4"
futures = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
rust-i18n = "0.5"
serde = "1"
serde_json = "1"
serde_derive = "1"
js-sys = "0.3"
pin-project-lite = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "DomTokenList",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "Location",
  "Node",
  "NodeList",
  "Storage",
  "Text",
  "TreeWalker",
  "Window"
]

[features]
debug = ["console_error_panic_hook"]