[package]
name = "leptos2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
itertools = "0.10"
js-sys = "0.3"
leptos_macro2 = { path = "../leptos_macro" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
thiserror = "1"
urlencoding = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Comment",
  "CssStyleDeclaration",
  "CustomEvent",
  "CustomEventInit",
  "Document",
  "DocumentFragment",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "Location",
  "Node",
  "NodeList",
  "ShadowRoot",
  "ShadowRootInit",
  "ShadowRootMode",
  "Storage",
  "Text",
  "TreeWalker",
  "Window"
]