[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "3"
actix-files = "0.5"
tempfile = "3"
website = { path = "../website" }
leptos = { path = "../../framework/leptos" }
serde = "1"
serde_json = "1"
episcopal-api = { path = "../../episcopal_api" }
lazy_static = "1"
urlencoding = "2"
reqwest = { version =  "0.10", features = ["json"]}
anyhow = "1"