[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { path = "../../framework/leptos" }
rust-i18n = "0.5"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
episcopal-api = { path = "../../episcopal_api" }
chrono = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "HtmlSelectElement", "Window", "DomRect", "ScrollToOptions", "Storage"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
reqwasm = "0.4"