[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos2 = { path = "../../framework2/leptos" }
rust-i18n = "0.6"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
htmlentity = "1"
itertools = "0.10"
chrono = "0.4"
js-sys = "0.3"
moka = "0.8"
urlencoding = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
once_cell= "1"
reqwasm = "0.5"
reqwest = { version = "0.11", features = ["json"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
markdown = "0.3"
# Episcopal API crates
api = { path = "../../episcopal_api/crates/api" }
calendar = { path = "../../episcopal_api/crates/calendar" }
hymnal = { path = "../../episcopal_api/crates/hymnal" }
language = { path = "../../episcopal_api/crates/language" }
ldf = { path = "../../episcopal_api/crates/export/ldf" }
lectionary = { path = "../../episcopal_api/crates/lectionary" }
library = { path = "../../episcopal_api/crates/library" }
liturgy = { path = "../../episcopal_api/crates/liturgy" }
psalter = { path = "../../episcopal_api/crates/psalter" }
reference-parser = { path = "../../episcopal_api/crates/reference-parser" }

[dependencies.web-sys]
version = "0.3"
features = [
	"AbortController",
	"Clipboard",
	"DomParser",
	"DomRect",
	"Event",
	"EventTarget",
	"FormData",
	"KeyboardEvent",
	"HtmlAudioElement",
	"HtmlFormElement",
	"HtmlSelectElement",
	"Navigator",
	"ScrollBehavior",
	"ScrollToOptions",
	"Selection",
	"Storage",
	"SupportedType",
	"Touch",
	"TouchEvent",
	"TouchList",
	"UrlSearchParams",
	"Window"
]
