[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
default = ["routes"]
routes = ["leptos2/router", "leptos2/backend", "alcoholic_jwt", "cached", "moka", "rust-i18n", "sqlx"]

[dependencies]
anyhow = "1"
leptos2 = { path = "../../framework2/leptos" }
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.10"
chrono = "0.4"
js-sys = "0.3"
urlencoding = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
once_cell= "1"
regex = "1"
reqwasm = "0.5"
reqwest = { version = "0.11", features = ["json"] }
strsim = "0.10"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
markdown = "0.3"

# Episcopal API crates
api = { path = "../../episcopal_api/crates/api" }
calendar = { path = "../../episcopal_api/crates/calendar" }
docx = { path = "../../episcopal_api/crates/export/docx" }
hymnal = { path = "../../episcopal_api/crates/hymnal" }
language = { path = "../../episcopal_api/crates/language" }
ldf = { path = "../../episcopal_api/crates/export/ldf" }
lectionary = { path = "../../episcopal_api/crates/lectionary" }
library = { path = "../../episcopal_api/crates/library" }
liturgy = { path = "../../episcopal_api/crates/liturgy" }
psalter = { path = "../../episcopal_api/crates/psalter" }
reference-parser = { path = "../../episcopal_api/crates/reference-parser" }

# Server-Only Crates
alcoholic_jwt = { version = "4091", optional = true }
cached = { version = "0.34", features = ["async"], optional = true }
moka = { version = "0.8", optional = true }
rust-i18n = { version = "0.6", optional = true }
sqlx = { version = "0.6", optional = true, features = ["postgres", "runtime-tokio-native-tls", "json", "chrono"]}
date_time_parser = "0.1.1"
tempfile = "3.3.0"

# web-sys settings
[dependencies.web-sys]
version = "0.3"
features = [
	"AbortController",
	"Clipboard",
	"HtmlDocument",
	"DomParser",
	"DomRect",
	"Event",
	"EventTarget",
	"FormData",
	"KeyboardEvent",
	"HtmlAudioElement",
	"HtmlFormElement",
	"HtmlSelectElement",
	"Navigator",
	"ScrollBehavior",
	"ScrollToOptions",
	"Selection",
	"Storage",
	"SupportedType",
	"Touch",
	"TouchEvent",
	"TouchList",
	"UrlSearchParams",
	"Window"
]
