[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = { version = "4", features = ["openssl", "macros"] }
actix-multipart = "0.4"
openssl = { version = "0.10", features = ["v110"] }
actix-files = "0.6"
actix-cors = "0.6"
futures = "0.3"
http = "0.2"
tempfile = "3"
app = { path = "../app",  features = ["server"] }
leptos2 = { path = "../../framework2/leptos" }
minifier = "0.2"
serde = "1"
serde_json = "1"
episcopal-api = { path = "../../episcopal_api" }
lazy_static = "1"
urlencoding = "2"
reqwest = { version =  "0.11", features = ["json"]}
anyhow = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "json"]}