[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "0.2"
commonprayer-site = { path = "../commonprayer-site", default-features = false, features = ["hydrate"] }
leptos = { path = "../../../leptos-new/leptos/leptos", features = ["hydrate"] }
log = "0.4"
wee_alloc = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'