[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "0.2"
commonprayer-site = { path = "../commonprayer-site", default-features = false, features = ["hydrate"] }
leptos = { path = "../../../leptos-new/leptos/leptos", default-features = false, features = ["hydrate"] }
leptos_router = { path = "../../../leptos-new/leptos/router", default-features = false, features = ["hydrate"] }
log = "0.4"
wee_alloc = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'