[package]
name = "commonprayer-site"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", optional = true }
common_macros = "0.1"
console_log = "0.2"
fluent-templates = "0.8"
itertools = "0.10"
gloo-net = { version = "0.2", optional = true }
leptos = { path = "../../../leptos-new/leptos/leptos", features = ["csr"]}
log = "0.4"
reqwest = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version =  "0.4", optional = true }
strum = "0.24"
strum_macros = "0.24"
typed-builder = "0.10"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["DomRect", "HtmlDialogElement", "MouseEvent"] }

# Episcopal API crates
api = { path = "../../episcopal_api/crates/api" }
calendar = { path = "../../episcopal_api/crates/calendar" }
canticle-table = { path = "../../episcopal_api/crates/canticle-table" }
docx = { path = "../../episcopal_api/crates/export/docx" }
hymnal = { path = "../../episcopal_api/crates/hymnal" }
language = { path = "../../episcopal_api/crates/language" }
ldf = { path = "../../episcopal_api/crates/export/ldf" }
lectionary = { path = "../../episcopal_api/crates/lectionary" }
library = { path = "../../episcopal_api/crates/library" }
liturgy = { path = "../../episcopal_api/crates/liturgy" }
psalter = { path = "../../episcopal_api/crates/psalter" }
reference-parser = { path = "../../episcopal_api/crates/reference-parser" }

[features]
default = ["csr"]
csr = ["leptos/csr", "dep:gloo-net", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
ssr = ["leptos/ssr", "dep:chrono", "dep:reqwest"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
