[package]
name = "commonprayer-site"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", optional = true }
common_macros = "0.1"
console_log = "0.2"
itertools = "0.10"
gloo-net = { version = "0.2", optional = true }
leptos = { path = "../../../leptos-new/leptos/leptos" }
leptos_meta = { path = "../../../leptos-new/leptos/meta" }
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version =  "0.4", optional = true }
strum = "0.24"
strum_macros = "0.24"
typed-builder = "0.10"
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["DomRect", "HtmlDialogElement", "MouseEvent"] }

# Episcopal API crates
api = { path = "../../episcopal_api/crates/api" }
calendar = { path = "../../episcopal_api/crates/calendar" }
canticle-table = { path = "../../episcopal_api/crates/canticle-table" }
docx = { path = "../../episcopal_api/crates/export/docx" }
hymnal = { path = "../../episcopal_api/crates/hymnal" }
language = { path = "../../episcopal_api/crates/language" }
ldf = { path = "../../episcopal_api/crates/export/ldf" }
lectionary = { path = "../../episcopal_api/crates/lectionary" }
library = { path = "../../episcopal_api/crates/library" }
liturgy = { path = "../../episcopal_api/crates/liturgy" }
psalter = { path = "../../episcopal_api/crates/psalter" }
reference-parser = { path = "../../episcopal_api/crates/reference-parser" }

[build-dependencies]
serde_json = "1"
psalter = { path = "../../episcopal_api/crates/psalter" }

[features]
default = ["hydrate"]
csr = ["leptos/csr", "leptos_meta/csr", "dep:gloo-net", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "reference-parser/browser", "liturgy/browser", "library/browser"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "dep:gloo-net", "dep:serde-wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "reference-parser/browser", "liturgy/browser", "library/browser"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "dep:chrono", "dep:reqwest", "reference-parser/regex", "liturgy/server", "library/server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
