[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = { version = "4", features = ["openssl", "macros"] }
futures = "0.3"
leptos = { path = "../../../leptos-new/leptos/leptos", default-features = false, features = ["ssr"] }
leptos_meta = { path = "../../../leptos-new/leptos/meta", default-features = false, features = ["ssr"] }
leptos_router = { path = "../../../leptos-new/leptos/router", default-features = false, features = ["ssr"] }
log = "0.4"
commonprayer-site = { path = "../commonprayer-site", default-features = false, features = ["ssr"] }
openssl = { version = "0.10", features = ["v110"] }
simple_logger = "2"
serde_json = "1"