[package]
name = "calendar"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
language = { path = "../language" }
status = { path = "../status" }