[package]
name = "psalter"
version = "0.1.0"
edition = "2018"

[dependencies]
lazy_static = "1.0"
serde = { version = "1.0", features = ["derive"]}
itertools = "0.10"
liturgy = { path = "../liturgy" }
reference-parser = { path = "../reference-parser" }

[features]
server = ["reference-parser/regex"]
browser = ["reference-parser/browser"]