[package]
name = "web-component"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
custom-elements = "0.2"
leptos = { path = "../../../../framework/leptos" }
website = { path = "../../../../website/website" }
liturgy = { path = "../../liturgy" }
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlElement"] }
reqwasm = "0.5"