[package]
name = "web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sauron = "0.43"
console_log = "0.2"
log = "0.4"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
liturgy = { path = "../../liturgy" }
reference-parser = { path = "../../reference-parser" }